Complete second section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
         </div>
     </div>
     
+    <div class="second-container">
+        <p>Some random information.</p>
+        <div class="fourimagebox">
+            <div class="textimage">
+                <div class="smallimage"><img src="./img/womenyoga.jpg" alt="yoga"><div>this is some subtext under an illustration image</div></div>
+                <div class="smallimage"><img src="./img/womenyoga.jpg" alt="yoga"><div>this is some subtext under an illustration image</div></div>
+                <div class="smallimage"><img src="./img/womenyoga.jpg" alt="yoga"><div>this is some subtext under an illustration image</div></div>
+                <div class="smallimage"><img src="./img/womenyoga.jpg" alt="yoga"><div>this is some subtext under an illustration image</div></div>
+            </div>
+        </div>
+    </div>
 
 
 </body>
