--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <div class="topside">
             <h1>Get Fit Yesterday</h1>
             <ul>
-                <li><a href="">header link one</a></li>
-                <li><a href="">header link two</a></li>
-                <li><a href="">header link three</a></li>
+                <li><a href="" class="hlink">header link one</a></li>
+                <li><a href="" class="hlink">header link two</a></li>
+                <li><a href="" class="hlink">header link three</a></li>
             </ul>
         </div>
         <div class="left-rightside">
             <div class="leftside">
                 <div class="hero">This website is awesome</div>
                 <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                <button>Sign up</button>
+                <a href="" style="border:0; background: #3882F6; margin-top:10px;">Sign Up</a>
             </div>
             <div class="rightside">
                 <img src="./img/womenyoga.jpg" alt="women doing yoga">
@@ -49,6 +49,21 @@
         </div>    
 
     </div>
+
+    <div class="fourth-container">
+        <!-- <div class="actionwrapper"> -->
+            <div class="action-signup">
+                <div class="actiontext">
+                        <div><span>Call to action! It's time!</span></div>
+                        <div>Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <a href="" alt="">Sign Up</a>
+            </div>
+        <!-- </div>  -->
+    </div>
+    <div class="footer">Copyright @ The Odin Project 2021</div>
+        
+   
 
 </body>
 
